# ocaml-webserver

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  dune-project  flake.nix  init.sql  shell.nix  turso  update_blog.sql  webserver.opam
.github/workflows/: docker.yml
blogs/: README.md  how_not_to_build_a_website.md  how_not_to_build_a_website_part_one.md  how_not_to_build_a_website_part_two.md  how_to_build_a_website.md  random.md  test.md  this_website.md  to_learn_or_to_do.md  zigmat.md
db/: init.sql  insert.sh  update.sh
lib/: dune
lib/turso/: Makefile  README.md  cache.ml  cache.mli  dune  go.mod  go.sum  main.go  turso.ml  turso.mli
lib/turso/cmd/: C.go
lib/turso/pkg/blog/: model.go  service.go
lib/turso/pkg/database/: database.go
nix/: docker.nix  shell.nix
public/fonts/: fonts.css
public/js/: antiThePrimeagen@0.0.1.js  antiThePrimeagen@0.0.2.js
public/styles/: main.css
public/styles/abstract/: variables.css
public/styles/base/: base.css  index.css  reset.css  util.css
public/styles/components/: blog.css  blog_card.css  call_to_action.css  card.css  fancy.css  footer.css  header.css  hero.css  icon.css  index.css  logo.css  main.css  search.css  tags.css
public/styles/pages/: blog.css  home.css  index.css
src/: blog.ml  dune  index.re  main.ml  page.ml  robots.txt  search.ml  sitemap.xml
src/components/: blog.re  blog_cards.re  blog_section.re  call_to_action.re  component.ml  doc.re  dune  footer.re  header.re  hero.re  icon.re  logo.re  search.re  view.ml
src/pages/: blog.ml  blog.re  blogs.re  dune  explore.ml  index.ml  index.re  page.ml  view.ml
test/: dune
